--- a/index.html
+++ b/index.html
@@ -57,7 +57,7 @@
         <!--WARSAW-->
         <div class="country">
           <div class="picture">
-            <img src="./warsaw.png" alt="warsaw" />
+            <img src="./image/warsaw.png" alt="warsaw" />
           </div>
           <div class="name">
             <h1>Warsaw</h1>
@@ -67,7 +67,7 @@
         <!--barca-->
         <div class="country">
           <div class="picture">
-            <img src="./barcelona.webp" alt="barcelona" />
+            <img src="./image/barcelona.webp" alt="barcelona" />
           </div>
           <div class="name">
             <h1>Barcelona</h1>
@@ -77,7 +77,7 @@
         <!--Munich-->
         <div class="country">
           <div class="picture">
-            <img src="./munich.png" alt="munich" />
+            <img src="./image/munich.png" alt="munich" />
           </div>
           <div class="name">
             <h1>Munich</h1>
@@ -87,7 +87,7 @@
         <!--Istanbul-->
         <div class="country">
           <div class="picture">
-            <img src="./istanbul.webp" alt="istanbul" />
+            <img src="./image/istanbul.webp" alt="istanbul" />
           </div>
           <div class="name">
             <h1>Istanbul</h1>
@@ -97,7 +97,7 @@
         <!--Rome-->
         <div class="country">
           <div class="picture">
-            <img src="./rome.png" alt="rome" />
+            <img src="./image/rome.png" alt="rome" />
           </div>
           <div class="name">
             <h1>Rome</h1>
@@ -107,7 +107,7 @@
         <!--Bologna-->
         <div class="country">
           <div class="picture">
-            <img src="./bologna.webp" alt="bologna" />
+            <img src="./image/bologna.webp" alt="bologna" />
           </div>
           <div class="name">
             <h1>Rome</h1>
@@ -117,7 +117,7 @@
         <!--Curitiba-->
         <div class="country">
           <div class="picture">
-            <img src="./curitiba.webp" alt="curitiba" />
+            <img src="./image/curitiba.webp" alt="curitiba" />
           </div>
           <div class="name">
             <h1>Curitiba</h1>
@@ -127,7 +127,7 @@
         <!--Riodejaneiro-->
         <div class="country">
           <div class="picture">
-            <img src="./rio-janeiro (1).png" alt="rio" />
+            <img src="./image/rio-janeiro (1).png" alt="rio" />
           </div>
           <div class="name">
             <h1>Rio De Janeiro</h1>
@@ -137,7 +137,7 @@
         <!--mexicocity-->
         <div class="country">
           <div class="picture">
-            <img src="./mexico-city.png" alt="mexico" />
+            <img src="./image/mexico-city.png" alt="mexico" />
           </div>
           <div class="name">
             <h1>Mexico City</h1>
@@ -147,7 +147,7 @@
         <!--Bogota-->
         <div class="country">
           <div class="picture">
-            <img src="./bogota.png" alt="bogota" />
+            <img src="./image/bogota.png" alt="bogota" />
           </div>
           <div class="name">
             <h1>Bogota</h1>
